<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RanaPaymentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/checkout"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/maheshwariEtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/pay_type"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <RadioGroup
        android:id="@+id/maheshwariRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maheshwariDebit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/debit"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <RadioButton
            android:id="@+id/maheshwariCredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <RadioButton
            android:id="@+id/maheshwariCash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:text="@string/cash"
            android:textAppearance="@android:style/TextAppearance.Small" />

    </RadioGroup>

    <EditText
        android:id="@+id/maheshwariEtCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/card"
        android:hint="@string/card"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        >
        <EditText
            android:id="@+id/maheshwariEtExDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:inputType="date"
            android:hint="@string/date"
            android:layout_weight="1"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/maheshwariEtCVV"
            android:layout_width="0dp"
            android:hint="@string/cvv"
            android:layout_height="match_parent"
            android:inputType="number"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:id="@+id/maheshwariEtFavCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/car"
        android:hint="@string/car"
        android:inputType="text" />

    <EditText
        android:id="@+id/maheshwariEtFavFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/food"
        android:hint="@string/food"
        android:inputType="text" />

    <EditText
        android:id="@+id/maheshwariEtFirstSchool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/favSchool"
        android:hint="@string/favSchool"
        android:inputType="text" />

    <EditText
        android:id="@+id/maheshwariEtFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/feedback"
        android:hint="@string/feedback"
        android:inputType="text" />

    <Button
        android:id="@+id/maheshwariSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:onClick="onClickPayment"
        android:text="@string/submit" />


</LinearLayout>