<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".homes.RanaCondoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/condo_apart"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/maheshwariCb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condo1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/maheshwariPrice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/price1"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/myImage"
            android:layout_height="@dimen/myImage"
            android:contentDescription="@string/houseImage"
            android:scaleType="centerCrop"
            android:src="@drawable/c1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/maheshwariCb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condo2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/maheshwariPrice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/price2"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/myImage"
            android:layout_height="@dimen/myImage"
            android:contentDescription="@string/houseImage"
            android:scaleType="centerCrop"
            android:src="@drawable/c2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/maheshwariCb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condo3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/maheshwariPrice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/price3"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/myImage"
            android:layout_height="@dimen/myImage"
            android:contentDescription="@string/houseImage"
            android:scaleType="centerCrop"
            android:src="@drawable/c3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/maheshwariCb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condo4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/maheshwariPrice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/price4"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/myImage"
            android:layout_height="@dimen/myImage"
            android:contentDescription="@string/houseImage"
            android:scaleType="centerCrop"
            android:src="@drawable/c4" />

    </LinearLayout>

    <Button
        android:id="@+id/maheshwariCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:onClick="onCheckoutClick"
        android:text="@string/checkout" />


</LinearLayout>